--- a/.github/workflows/release_check.yml
+++ b/.github/workflows/release_check.yml
@@ -3,7 +3,7 @@ name: Release check
 
 on:
   schedule:
-    - cron: '* * * * 0'  # Check every Sunday
+    - cron: '0 0 * * 0'  # Check every Sunday
 
 
 jobs:
